syntax = "proto3";

package Tilikum.rpc;

option optimize_for = SPEED;

/* Assembly is collection of parts with a UID */
message Assembly {
    string GUID = 1;
    Component root = 2; // changed
    string fileName = 3; // changed
    PhysicalProperties physicalProperties = 4; // only want root physics stuff
    string version = 5;
    string owner = 6;
    string date = 7;
}

/* Part represents the UnityEngine.Mesh fields needed to construct the object from 3D data present in Fusion*/
message Component {
    string GUID = 1;
    string name = 2;
    PhysicalProperties physicalProperties = 3;
    repeated Body bodies = 4;
    repeated Component components = 5;
}

message Body {
    string GUID = 1;
    string name = 2;
    repeated Vertex nodes = 3;
    repeated Vertex normals = 4;
    repeated int32 indicies = 5;
    Material material = 6;
}

/* Mainly used for triangle Vertex positions */
message Vertex {
    float x = 1;
    float y = 2;
    float z = 3;
}

message PhysicalProperties {
    int32 friction = 1;
    double density = 2; // kg per cubic cm kg/(cm^3)
    double mass = 3; // kg
    double volume = 4; //cm^3
    double area = 5; // cm^2
    Vertex com = 6;
}

message Material {
    Color albedo = 1;
}

// RGBA in expanded form 0-255
message Color {
    int32 R = 1;
    int32 G = 2;
    int32 B = 3;
    int32 opacity = 4;
}